<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/LightGray"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/maharashtra"
            android:textColor="@color/colorTextBlack" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:text="@string/active"
            android:textColor="@color/Red" />

        <TextView
            android:id="@+id/recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:text="@string/recovered"
            android:textColor="@color/Green" />

        <TextView
            android:id="@+id/deceased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:text="@string/deceased"
            android:textColor="@color/colorTextBlack" />

        <TextView
            android:id="@+id/confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:text="@string/confirmed"
            android:textColor="@color/Red" />


    </LinearLayout>


</LinearLayout>
